--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@
     max-width: 400px; 
     }
   /* Animation for top circle */
-  #top-circle{
+  #Layer_1{
     animation: color-shift-top 7s infinite;
 }
 
@@ -45,11 +45,11 @@
             fill:rgb(44, 212, 201);
             }
             50%{
-                fill:rgb(2, 112, 63);
+                fill:rgb(13, 190, 107);
             }
         }
         #top-circle{
-            fill:rgb(0, 255, 76);
+            fill:rgb(201, 201, 35);
 }
 
   /* Animation for middle circle */
@@ -64,7 +64,7 @@
             fill:rgb(212, 44, 145);
             }
             50%{
-                fill:rgb(13, 134, 190);
+                fill:rgb(22, 13, 190);
             }
         }
     
